@@ -8,28 +8,19 @@ repositories {
     mavenCentral()
 }
 
+def javaFxVersion = '17.0.7'
+
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 
-    String javaFxVersion = '17.0.7'
-
-    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
-
+    // Include JavaFX dependencies for all platforms
+    ['win', 'mac', 'linux'].each { platform ->
+        implementation "org.openjfx:javafx-base:$javaFxVersion:$platform"
+        implementation "org.openjfx:javafx-controls:$javaFxVersion:$platform"
+        implementation "org.openjfx:javafx-fxml:$javaFxVersion:$platform"
+        implementation "org.openjfx:javafx-graphics:$javaFxVersion:$platform"
+    }
 }
 
 sourceSets {
@@ -45,32 +36,26 @@ sourceSets {
 
 test {
     useJUnitPlatform()
-
     testLogging {
         events "passed", "skipped", "failed"
-
         showExceptions true
         exceptionFormat "full"
         showCauses true
         showStackTraces true
-        showStandardStreams = false
     }
 }
 
 application {
-    mainClass.set("chatbuddy.Main")
+    mainClass.set('chatbuddy.MainLauncher') // Use MainLauncher as the entry point
 }
 
 shadowJar {
     archiveBaseName.set('ChatBuddy')
     archiveClassifier.set(null)
-    archiveVersion.set('1.1')
+    archiveVersion.set('2.0')
+    configurations = [project.configurations.runtimeClasspath]
 }
 
-run {
-    jvmArgs = [
-            "--module-path", "/path/to/javafx-sdk-17.0.7/lib",
-            "--add-modules", "javafx.controls,javafx.fxml"
-    ]
-    standardInput = System.in
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
